# Bond-agent

./: .dockerignore  .env.example  .gitignore  2026-02-23T07_59_05.393Z PRADMA - Shared With Me - Shared With Me - Shared With Me.csv  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.internal.yml  docker-compose.yml  e2e-test-report.md  pyproject.toml  setup_db.py
.agents/plans/: close-2026-04-29-e2e-regressions.md  complete-committed-disconnect-recovery-and-doc-sync.md  e2e-remediation-corpus-and-metadata-hardening.md  e2e-remediation-responsive-layouts.md  e2e-remediation-roadmap.md  e2e-remediation-streaming-and-hitl.md  fix-research-report-truncation.md  improve-author-quality-and-verify-checkpoint-recovery.md  internal-deployment-hardening-01-security-contract-and-backend-baseline.md  internal-deployment-hardening-02-frontend-gateway-and-auth.md  internal-deployment-hardening.md  (+4 more)
.claude/: settings.json
.planning/: COMMUNICATION_STYLE.md  E2E_REPORT_2026-04-28.md  IMPROVEMENTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
bond/: __init__.py  config.py  harness.py  llm.py  models.py  schemas.py
e2e-downloads/: author-draft.md
e2e-fixtures/: upload-sample.txt
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
scripts/: calibrate_thresholds.py  evaluate_author_quality.py  playwright_checkpoint_recovery_regressions.py  playwright_detached_runtime_journey.py  playwright_post_signoff_regressions.py  reconcile_duplicate_metadata.py  reindex_corpus.py  validate_exa_polish.py
tests/: conftest.py  test_metadata_log_async.py
(+222 files in other folders)
